fix : 어드민 보관소 상세 및 목록 구현